<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cities">

    <fragment
        android:id="@+id/navigation_cities"
        android:name="com.geekbrains.android.homework.fragments.CitiesFragment"
        android:label="@string/title_cities"
        tools:layout="@layout/fragment_citieslist"/>

    <fragment
        android:id="@+id/navigation_developer"
        android:name="com.geekbrains.android.homework.fragments.DeveloperFragment"
        android:label="@string/title_developer"
        tools:layout="@layout/fragment_developer"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.geekbrains.android.homework.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>
